# husky_man_ros

./: README.md
husky_man_app/: CMakeLists.txt  package.xml  setup.py
husky_man_app/config/: husky_man_app.yaml  joy_teleop.yaml
husky_man_app/launch/: bringup.launch  caster_man_app.launch  teleop.launch
husky_man_app/launch/include/: pointcloud_to_laserscan.launch.xml
husky_man_app/msg/: brain_control_msg.msg
husky_man_app/nodes/: aruco_detect_client.py  keyboard_control (copy).py  keyboard_control.py
husky_man_app/src/: box_detect_node.cpp  marker_detect_node.cpp
husky_man_app/srv/: PickGift.srv  vision_grasp.srv
husky_man_bringup/: CMakeLists.txt  package.xml
husky_man_bringup/launch/: bringup.launch  kinova_bringup.launch
husky_man_description/: CMakeLists.txt  package.xml
husky_man_description/launch/: model.launch
husky_man_description/meshes/: 9060-husky-pnm-urdf.stl  9060_vlp16_support_urdf.stl
husky_man_description/urdf/: husky.urdf.xacro  husky_kinova_man.urdf.xacro  kinect_v2.urdf.xacro
husky_man_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
husky_man_moveit_config/config/: fake_controllers.yaml  husky.srdf  ompl_planning.yaml  ros_controllers.yaml
husky_man_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  execute.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  husky_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
husky_man_viz/: CMakeLists.txt  package.xml
husky_man_viz/launch/: display.launch
husky_man_viz/viz/: model.rviz  view.rviz
